Update 4byte after bulk import and implementing `/import` endpoint (#2443)
* Add hasVerifiedContract to responses, remove error sigs, change queries

* Change materialized view and /stats api

* Add /import endpoint

* Remove "error" SignatureType

* Avoid process.exit(0) on tests to show mocha test results

* Fix 4byte debug task

* Fix 4byte signature validation logic

* Change tests to not use error fields. Add /import tests

* Bulk test longest signatures

* Bring error type back only for DB compatibility and not for response

* Fix /stats, add test cases without type, extend the /stats test

* Remove error field in 4byte validation
